--- a/frontend/index.html
+++ b/frontend/index.html
@@ -282,7 +282,7 @@
         <!-- Left Content -->
         <div class="space-y-6 animate-fadeIn">
           <p class="text-cyan-400 uppercase tracking-widest text-sm">
-            Full-Stack MERN Developer
+             MERN-Stack Developer
           </p>
 
           <h1 class="text-5xl md:text-6xl font-extrabold leading-tight">
@@ -291,9 +291,10 @@
           </h1>
 
           <p class="text-gray-400 max-w-lg text-lg">
-            I’m <span class="text-white font-semibold">Jitesh Kumar</span> —
-            crafting fast, scalable full-stack applications using MERN Stack &
-            Java DSA.
+           I’m <span class="text-white font-semibold">Jitesh Kumar</span> —
+a MERN stack developer strengthening core DSA concepts in Java while building
+real-world web applications.
+
           </p>
 
           <div class="flex gap-6 pt-4">
