Updated hero section, right card bigger and animations

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -287,8 +287,8 @@
     </script>
 
     <!-- HERO -->
- <section class="relative min-h-screen flex items-center overflow-hidden bg-black">
- 
+<section class="relative min-h-screen flex items-center overflow-hidden bg-black">
+  <!-- Background Glow -->
   <div
     class="absolute w-[700px] h-[700px] bg-cyan-500/30 blur-[160px]
            -top-40 -left-40 animate-pulse"
@@ -308,16 +308,8 @@
         class="text-cyan-400 uppercase tracking-widest text-sm
                opacity-0 animate-[fadeIn_1s_ease-out_forwards]"
       >
-<<<<<<< HEAD
-        <!-- Left Content -->
-        <div class="space-y-6 animate-fadeIn">
-          <p class="text-cyan-400 uppercase tracking-widest text-sm">
-             MERN-Stack Developer
-          </p>
-=======
         MERN Stack Developer
       </p>
->>>>>>> 14fdb10 (updated)
 
       <h2
         class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl
@@ -329,23 +321,14 @@
         websites
       </h2>
 
-<<<<<<< HEAD
-          <p class="text-gray-400 max-w-lg text-lg">
-           I’m <span class="text-white font-semibold">Jitesh Kumar</span> —
-a MERN stack developer strengthening core DSA concepts in Java while building
-real-world web applications.
-
-          </p>
-=======
       <p
-        class="text-gray-400 max-w-lg text-base md:text-lg leading-relaxed
+        class="text-gray-400 max-w-lg text-lg
                opacity-0 animate-[fadeIn_1s_ease-out_0.4s_forwards]"
       >
         I’m <span class="text-white font-semibold">Jitesh Kumar</span> — a
-        <span class="text-cyan-400">MERN Stack Developer</span> strengthening
-        core DSA concepts in Java while building real-world web applications.
+        MERN stack developer strengthening core DSA concepts in Java while
+        building real-world web applications.
       </p>
->>>>>>> 14fdb10 (updated)
 
       <!-- BUTTONS -->
       <div
@@ -353,79 +336,91 @@ real-world web applications.
                opacity-0 animate-[fadeIn_1s_ease-out_0.6s_forwards]"
       >
         <!-- View Projects -->
-       <a
-  href="#projects"
-  class="relative inline-flex items-center gap-2 px-8 py-3
-         rounded-xl font-semibold text-cyan-400
-         border border-cyan-400 overflow-hidden group
-         transition-all duration-700 ease-out
-         hover:scale-[1.03]"
->
-  <span
-    class="absolute inset-0 bg-cyan-400 -translate-y-full
-           group-hover:translate-y-0
-           transition-transform duration-700 ease-out"
-  ></span>
+        <a
+          href="#projects"
+          class="relative inline-flex items-center gap-2 px-8 py-3
+                 rounded-xl font-semibold text-cyan-400
+                 border border-cyan-400 overflow-hidden group
+                 transition-all duration-700 ease-out
+                 hover:scale-[1.03]"
+        >
+          <span
+            class="absolute inset-0 bg-cyan-400 -translate-y-full
+                   group-hover:translate-y-0
+                   transition-transform duration-700 ease-out"
+          ></span>
+          <span class="relative transition-colors duration-700 group-hover:text-black">
+            View Projects
+          </span>
+          <span class="relative transition-colors duration-700 group-hover:text-black">
+            →
+          </span>
+        </a>
 
-  <span class="relative transition-colors duration-700 group-hover:text-black">
-    View Projects
-  </span>
-  <span class="relative transition-colors duration-700 group-hover:text-black">
-    →
-  </span>
-</a>
         <!-- Contact Me -->
-      <a
-  href="#contact"
-  class="relative inline-flex items-center gap-2 px-8 py-3
-         rounded-xl font-semibold text-cyan-400
-         border border-cyan-400 overflow-hidden group
-         transition-all duration-700 ease-out
-         hover:scale-[1.03]"
->
-  <span
-    class="absolute inset-0 bg-cyan-400 translate-y-full
-           group-hover:translate-y-0
-           transition-transform duration-700 ease-out"
-  ></span>
-
-  <span class="relative transition-colors duration-700 group-hover:text-black">
-    Contact Me
-  </span>
-  <span class="relative transition-colors duration-700 group-hover:text-black">
-    →
-  </span>
-</a>
-
+        <a
+          href="#contact"
+          class="relative inline-flex items-center gap-2 px-8 py-3
+                 rounded-xl font-semibold text-cyan-400
+                 border border-cyan-400 overflow-hidden group
+                 transition-all duration-700 ease-out
+                 hover:scale-[1.03]"
+        >
+          <span
+            class="absolute inset-0 bg-cyan-400 translate-y-full
+                   group-hover:translate-y-0
+                   transition-transform duration-700 ease-out"
+          ></span>
+          <span class="relative transition-colors duration-700 group-hover:text-black">
+            Contact Me
+          </span>
+          <span class="relative transition-colors duration-700 group-hover:text-black">
+            →
+          </span>
+        </a>
       </div>
+
     </div>
 
     <!-- RIGHT VISUAL -->
     <div
-      class="relative opacity-0
-             animate-[fadeIn_1s_ease-out_0.8s_forwards]"
-    >
-      <div
-        class="bg-gradient-to-br from-cyan-500/20 to-purple-500/20
-               backdrop-blur-xl p-8 rounded-3xl
-               border border-white/10 shadow-xl
-               transition-all duration-500
-               hover:-translate-y-2 hover:shadow-cyan-500/30"
-      >
-        <p class="text-sm text-gray-400 mb-4">Live App Preview</p>
+  class="relative opacity-0 justify-self-end
+         animate-[fadeIn_1s_ease-out_0.8s_forwards]"
+>
+  <div
+    class="bg-gradient-to-br from-cyan-500/20 to-purple-500/20
+           backdrop-blur-xl p-10 rounded-3xl
+           border border-white/10 shadow-xl
+           transition-all duration-500
+           hover:-translate-y-2 hover:shadow-cyan-500/40
+           max-w-md md:max-w-lg lg:max-w-xl"
+  >
+    <p class="text-sm md:text-base text-gray-400 mb-4">Live App Preview</p>
 
-        <div
-          class="bg-black rounded-xl p-4 font-mono text-sm
-                 text-green-400 space-y-2"
-        >
-          <p>> npm run build</p>
-          <p class="animate-pulse">> MERN app deployed successfully 🚀</p>
-          <p>> Java DSA logic optimized ✔</p>
-        </div>
-      </div>
+    <div
+      class="bg-black rounded-xl p-6 md:p-8 font-mono text-sm md:text-base
+             text-green-400 space-y-3"
+    >
+      <p>> npm run build</p>
+      <p class="animate-pulse">> MERN app deployed successfully 🚀</p>
+      <p>> Java DSA logic optimized ✔</p>
     </div>
   </div>
+</div>
 
+  </div>
+
+  <!-- Inline Animations -->
+  <style>
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </section>
 
 
