UI made fully responsive

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -814,7 +814,7 @@
             class="w-full h-48 bg-gray-800 rounded-xl mb-6 flex items-center justify-center overflow-hidden"
           >
             <img
-              src="e-commerce.png"
+              src="Screenshot 2026-01-26 211639.png"
               alt="E-commerce Screenshot"
               class="object-cover w-full h-full"
             />
@@ -824,29 +824,73 @@
           <h3
             class="text-xl font-bold mb-2 group-hover:text-cyan-400 transition-colors"
           >
-            E-commerce
+           ScatchElecto
           </h3>
 
           <!-- Description -->
           <p class="text-gray-400 mb-4 text-sm">
-            Full-stack store with product catalog, cart & checkout
-            functionality.
+           Full-stack electronics app with product catalog, cart, checkout, and user authentication.
           </p>
 
           <!-- Status Badges -->
-          <div class="flex flex-wrap gap-2 mb-4">
+                <div class="flex flex-wrap gap-2 mb-4">
             <span
               class="text-xs px-3 py-1 rounded-full bg-green-500/20 text-green-500"
-              >Working</span
+              >Live</span
             >
             <span
               class="text-xs px-3 py-1 rounded-full bg-blue-500/20 text-blue-500"
-              >Backend</span
+              >Code</span
             >
             <span
               class="text-xs px-3 py-1 rounded-full bg-purple-500/20 text-purple-500"
-              >MERN</span
+              >Complete</span
             >
+          </div>
+
+          <!-- Buttons -->
+          <div class="flex gap-4 mt-4">
+            <a
+              href="https://scatchelecto.onrender.com/"
+              target="_blank"
+              class="inline-flex items-center gap-2 px-5 py-2 rounded-xl font-semibold text-white bg-cyan-500 hover:bg-cyan-400 transition-transform duration-300 hover:scale-105"
+            >
+              Live
+              <svg
+                class="w-4 h-4 transition-transform group-hover:translate-x-1"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M5 12h14M12 5l7 7-7 7"
+                ></path>
+              </svg>
+            </a>
+
+            <a
+              href="https://github.com/jiteshkumar1234567/E-commerce-final-"
+              target="_blank"
+              class="inline-flex items-center gap-2 px-5 py-2 rounded-xl font-semibold text-white bg-purple-500 hover:bg-purple-400 transition-transform duration-300 hover:scale-105"
+            >
+              Code
+              <svg
+                class="w-4 h-4 transition-transform group-hover:translate-x-1"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M5 12h14M12 5l7 7-7 7"
+                ></path>
+              </svg>
+            </a>
           </div>
         </div>
 
