Update email from yjitesh3203@email.com to yjitesh3203@gmail.com

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -972,7 +972,7 @@
 
               <div class="p-5 rounded-xl bg-white/5 border border-white/10">
                 <p class="text-xs text-gray-400 mb-1">Email</p>
-                <p class="font-medium break-all">yjitesh3203@email.com</p>
+                <p class="font-medium break-all">yjitesh3203@gmail.com</p>
               </div>
             </div>
 
