--- a/frontend/index.html
+++ b/frontend/index.html
@@ -154,16 +154,26 @@
         transform: scaleX(1);
       }
 
-  /* <!-- Inline Animations --> */
-  
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-    @keyframes slideUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+      /* <!-- Inline Animations --> */
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+      @keyframes slideUp {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
     </style>
   </head>
 
@@ -287,142 +297,134 @@
     </script>
 
     <!-- HERO -->
-<section class="relative min-h-screen flex items-center overflow-hidden bg-black">
-  <!-- Background Glow -->
-  <div
-    class="absolute w-[700px] h-[700px] bg-cyan-500/30 blur-[160px]
-           -top-40 -left-40 animate-pulse"
-  ></div>
-  <div
-    class="absolute w-[700px] h-[700px] bg-purple-500/30 blur-[160px]
-           top-40 right-0 animate-pulse"
-  ></div>
-
-  <div
-    class="relative z-10 max-w-7xl mx-auto px-6 md:px-12
-           grid md:grid-cols-2 gap-12 items-center"
-  >
-    <!-- LEFT CONTENT -->
-    <div class="space-y-6">
-      <p
-        class="text-cyan-400 uppercase tracking-widest text-sm
-               opacity-0 animate-[fadeIn_1s_ease-out_forwards]"
-      >
-        MERN Stack Developer
-      </p>
-
-      <h2
-        class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl
-               font-bold leading-snug tracking-tight text-white
-               opacity-0 animate-[slideUp_1s_ease-out_0.2s_forwards]"
-      >
-        I design & develop
-        <span class="text-cyan-400">modern</span>
-        websites
-      </h2>
-
-      <p
-        class="text-gray-400 max-w-lg text-lg
-               opacity-0 animate-[fadeIn_1s_ease-out_0.4s_forwards]"
-      >
-        I’m <span class="text-white font-semibold">Jitesh Kumar</span> — a
-        MERN stack developer strengthening core DSA concepts in Java while
-        building real-world web applications.
-      </p>
-
-      <!-- BUTTONS -->
+    <section
+      class="relative min-h-screen flex items-center overflow-hidden bg-black"
+    >
+      <!-- Background Glow -->
       <div
-        class="flex gap-6 pt-4
-               opacity-0 animate-[fadeIn_1s_ease-out_0.6s_forwards]"
-      >
-        <!-- View Projects -->
-        <a
-          href="#projects"
-          class="relative inline-flex items-center gap-2 px-8 py-3
-                 rounded-xl font-semibold text-cyan-400
-                 border border-cyan-400 overflow-hidden group
-                 transition-all duration-700 ease-out
-                 hover:scale-[1.03]"
-        >
-          <span
-            class="absolute inset-0 bg-cyan-400 -translate-y-full
-                   group-hover:translate-y-0
-                   transition-transform duration-700 ease-out"
-          ></span>
-          <span class="relative transition-colors duration-700 group-hover:text-black">
-            View Projects
-          </span>
-          <span class="relative transition-colors duration-700 group-hover:text-black">
-            →
-          </span>
-        </a>
+        class="absolute w-[700px] h-[700px] bg-cyan-500/30 blur-[160px] -top-40 -left-40 animate-pulse"
+      ></div>
+      <div
+        class="absolute w-[700px] h-[700px] bg-purple-500/30 blur-[160px] top-40 right-0 animate-pulse"
+      ></div>
 
-        <!-- Contact Me -->
-        <a
-          href="#contact"
-          class="relative inline-flex items-center gap-2 px-8 py-3
-                 rounded-xl font-semibold text-cyan-400
-                 border border-cyan-400 overflow-hidden group
-                 transition-all duration-700 ease-out
-                 hover:scale-[1.03]"
+      <div
+        class="relative z-10 max-w-7xl mx-auto px-6 md:px-12 grid md:grid-cols-2 gap-12 items-center"
+      >
+        <!-- LEFT CONTENT -->
+        <div class="space-y-6">
+          <p
+            class="text-cyan-400 uppercase tracking-widest text-sm opacity-0 animate-[fadeIn_1s_ease-out_forwards]"
+          >
+            MERN Stack Developer
+          </p>
+
+          <h2
+            class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-bold leading-snug tracking-tight text-white opacity-0 animate-[slideUp_1s_ease-out_0.2s_forwards]"
+          >
+            I design & develop
+            <span class="text-cyan-400">modern</span>
+            websites
+          </h2>
+
+          <p
+            class="text-gray-400 max-w-lg text-lg opacity-0 animate-[fadeIn_1s_ease-out_0.4s_forwards]"
+          >
+            I’m <span class="text-white font-semibold">Jitesh Kumar</span> — a
+            MERN stack developer strengthening core DSA concepts in Java while
+            building real-world web applications.
+          </p>
+
+          <!-- BUTTONS -->
+          <div
+            class="flex gap-6 pt-4 opacity-0 animate-[fadeIn_1s_ease-out_0.6s_forwards]"
+          >
+            <!-- View Projects -->
+            <a
+              href="#projects"
+              class="relative inline-flex items-center gap-2 px-8 py-3 rounded-xl font-semibold text-cyan-400 border border-cyan-400 overflow-hidden group transition-all duration-700 ease-out hover:scale-[1.03]"
+            >
+              <span
+                class="absolute inset-0 bg-cyan-400 -translate-y-full group-hover:translate-y-0 transition-transform duration-700 ease-out"
+              ></span>
+              <span
+                class="relative transition-colors duration-700 group-hover:text-black"
+              >
+                View Projects
+              </span>
+              <span
+                class="relative transition-colors duration-700 group-hover:text-black"
+              >
+                →
+              </span>
+            </a>
+
+            <!-- Contact Me -->
+            <a
+              href="#contact"
+              class="relative inline-flex items-center gap-2 px-8 py-3 rounded-xl font-semibold text-cyan-400 border border-cyan-400 overflow-hidden group transition-all duration-700 ease-out hover:scale-[1.03]"
+            >
+              <span
+                class="absolute inset-0 bg-cyan-400 translate-y-full group-hover:translate-y-0 transition-transform duration-700 ease-out"
+              ></span>
+              <span
+                class="relative transition-colors duration-700 group-hover:text-black"
+              >
+                Contact Me
+              </span>
+              <span
+                class="relative transition-colors duration-700 group-hover:text-black"
+              >
+                →
+              </span>
+            </a>
+          </div>
+        </div>
+
+        <!-- RIGHT VISUAL -->
+        <div
+          class="relative opacity-0 justify-self-end animate-[fadeIn_1s_ease-out_0.8s_forwards]"
         >
-          <span
-            class="absolute inset-0 bg-cyan-400 translate-y-full
-                   group-hover:translate-y-0
-                   transition-transform duration-700 ease-out"
-          ></span>
-          <span class="relative transition-colors duration-700 group-hover:text-black">
-            Contact Me
-          </span>
-          <span class="relative transition-colors duration-700 group-hover:text-black">
-            →
-          </span>
-        </a>
+          <div
+            class="bg-gradient-to-br from-cyan-500/20 to-purple-500/20 backdrop-blur-xl p-10 rounded-3xl border border-white/10 shadow-xl transition-all duration-500 hover:-translate-y-2 hover:shadow-cyan-500/40 max-w-md md:max-w-lg lg:max-w-xl"
+          >
+            <p class="text-sm md:text-base text-gray-400 mb-4">
+              Live App Preview
+            </p>
+
+            <div
+              class="bg-black rounded-xl p-6 md:p-8 font-mono text-sm md:text-base text-green-400 space-y-3"
+            >
+              <p>> npm run build</p>
+              <p class="animate-pulse">> MERN app deployed successfully 🚀</p>
+              <p>> Java DSA logic optimized ✔</p>
+            </div>
+          </div>
+        </div>
       </div>
 
-    </div>
-
-    <!-- RIGHT VISUAL -->
-    <div
-  class="relative opacity-0 justify-self-end
-         animate-[fadeIn_1s_ease-out_0.8s_forwards]"
->
-  <div
-    class="bg-gradient-to-br from-cyan-500/20 to-purple-500/20
-           backdrop-blur-xl p-10 rounded-3xl
-           border border-white/10 shadow-xl
-           transition-all duration-500
-           hover:-translate-y-2 hover:shadow-cyan-500/40
-           max-w-md md:max-w-lg lg:max-w-xl"
-  >
-    <p class="text-sm md:text-base text-gray-400 mb-4">Live App Preview</p>
-
-    <div
-      class="bg-black rounded-xl p-6 md:p-8 font-mono text-sm md:text-base
-             text-green-400 space-y-3"
-    >
-      <p>> npm run build</p>
-      <p class="animate-pulse">> MERN app deployed successfully 🚀</p>
-      <p>> Java DSA logic optimized ✔</p>
-    </div>
-  </div>
-</div>
-
-  </div>
-
-  <!-- Inline Animations -->
-  <style>
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-    @keyframes slideUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
-</section>
-
+      <!-- Inline Animations -->
+      <style>
+        @keyframes fadeIn {
+          from {
+            opacity: 0;
+          }
+          to {
+            opacity: 1;
+          }
+        }
+        @keyframes slideUp {
+          from {
+            opacity: 0;
+            transform: translateY(20px);
+          }
+          to {
+            opacity: 1;
+            transform: translateY(0);
+          }
+        }
+      </style>
+    </section>
 
     <!-- SKILLS -->
     <section id="skills" class="py-28 relative overflow-hidden">
@@ -746,27 +748,32 @@
           <!-- Status Badges -->
           <div class="flex flex-wrap gap-2 mb-4">
             <span
-              class="text-xs px-3 py-1 rounded-full bg-green-500/20 text-green-500"
-              >Live</span
+              class="text-xs px-3 py-1 rounded-full bg-emerald-500/20 text-emerald-400 border border-emerald-500/30"
             >
-            <span
-              class="text-xs px-3 py-1 rounded-full bg-blue-500/20 text-blue-500"
-              >Code</span
-            >
-            <span
-              class="text-xs px-3 py-1 rounded-full bg-purple-500/20 text-purple-500"
-              >Complete</span
-            >
-          </div>
+              ● Live
+            </span>
 
+            <span
+              class="text-xs px-3 py-1 rounded-full bg-sky-500/20 text-sky-400 border border-sky-500/30"
+            >
+              Source Code
+            </span>
+
+            <span
+              class="text-xs px-3 py-1 rounded-full bg-violet-500/20 text-violet-400 border border-violet-500/30"
+            >
+              Completed
+            </span>
+          </div>
           <!-- Buttons -->
           <div class="flex gap-4 mt-4">
+            <!-- Live Button -->
             <a
               href="https://wanderlust-project-1-rbg0.onrender.com"
               target="_blank"
-              class="inline-flex items-center gap-2 px-5 py-2 rounded-xl font-semibold text-white bg-cyan-500 hover:bg-cyan-400 transition-transform duration-300 hover:scale-105"
+              class="group inline-flex items-center gap-2 px-6 py-2.5 rounded-xl font-semibold text-white bg-gradient-to-r from-cyan-500 to-emerald-500 hover:opacity-90 transition-all duration-300 hover:scale-105"
             >
-              Live
+              View Live
               <svg
                 class="w-4 h-4 transition-transform group-hover:translate-x-1"
                 fill="none"
@@ -782,12 +789,13 @@
               </svg>
             </a>
 
+            <!-- Code Button -->
             <a
               href="https://github.com/jiteshkumar1234567/wanderlust-project"
               target="_blank"
-              class="inline-flex items-center gap-2 px-5 py-2 rounded-xl font-semibold text-white bg-purple-500 hover:bg-purple-400 transition-transform duration-300 hover:scale-105"
+              class="group inline-flex items-center gap-2 px-6 py-2.5 rounded-xl font-semibold text-violet-400 border border-violet-500/40 hover:bg-violet-500/10 transition-all duration-300 hover:scale-105"
             >
-              Code
+              View Code
               <svg
                 class="w-4 h-4 transition-transform group-hover:translate-x-1"
                 fill="none"
@@ -824,40 +832,45 @@
           <h3
             class="text-xl font-bold mb-2 group-hover:text-cyan-400 transition-colors"
           >
-           ScatchElecto
+            ScatchElecto
           </h3>
 
           <!-- Description -->
           <p class="text-gray-400 mb-4 text-sm">
-           Full-stack electronics app with product catalog, cart, checkout, and user authentication.
+            Full-stack electronics app with product catalog, cart, checkout, and
+            user authentication.
           </p>
 
           <!-- Status Badges -->
-                <div class="flex flex-wrap gap-2 mb-4">
+          <div class="flex flex-wrap gap-2 mb-4">
             <span
-              class="text-xs px-3 py-1 rounded-full bg-green-500/20 text-green-500"
-              >Live</span
+              class="text-xs px-3 py-1 rounded-full bg-yellow-500/20 text-yellow-400 animate-pulse"
             >
-            <span
-              class="text-xs px-3 py-1 rounded-full bg-blue-500/20 text-blue-500"
-              >Code</span
-            >
-            <span
-              class="text-xs px-3 py-1 rounded-full bg-purple-500/20 text-purple-500"
-              >Complete</span
-            >
-          </div>
+              🚧 Working
+            </span>
 
+            <span
+              class="text-xs px-3 py-1 rounded-full bg-gray-500/20 text-gray-400"
+            >
+              Code Ready
+            </span>
+
+            <span
+              class="text-xs px-3 py-1 rounded-full bg-orange-500/20 text-orange-400"
+            >
+              In Progress
+            </span>
+          </div>
           <!-- Buttons -->
           <div class="flex gap-4 mt-4">
-            <a
-              href="https://scatchelecto.onrender.com/"
-              target="_blank"
-              class="inline-flex items-center gap-2 px-5 py-2 rounded-xl font-semibold text-white bg-cyan-500 hover:bg-cyan-400 transition-transform duration-300 hover:scale-105"
+            <!-- Live Button Disabled -->
+            <button
+              disabled
+              class="inline-flex items-center gap-2 px-5 py-2 rounded-xl font-semibold text-gray-400 bg-gray-600/40 cursor-not-allowed"
             >
-              Live
+              Live Soon
               <svg
-                class="w-4 h-4 transition-transform group-hover:translate-x-1"
+                class="w-4 h-4"
                 fill="none"
                 stroke="currentColor"
                 stroke-width="2"
@@ -866,17 +879,18 @@
                 <path
                   stroke-linecap="round"
                   stroke-linejoin="round"
-                  d="M5 12h14M12 5l7 7-7 7"
+                  d="M12 8v4l3 3"
                 ></path>
               </svg>
-            </a>
+            </button>
 
+            <!-- Code Button Active -->
             <a
               href="https://github.com/jiteshkumar1234567/E-commerce-final-"
               target="_blank"
               class="inline-flex items-center gap-2 px-5 py-2 rounded-xl font-semibold text-white bg-purple-500 hover:bg-purple-400 transition-transform duration-300 hover:scale-105"
             >
-              Code
+              View Code
               <svg
                 class="w-4 h-4 transition-transform group-hover:translate-x-1"
                 fill="none"
@@ -977,62 +991,50 @@
             </div>
 
             <!-- Resume -->
-<a
-  id="btn1"
-  href="resume.pdf"
-  download
-  class="relative inline-flex items-center gap-2 mt-10
-         px-7 py-3 rounded-xl text-sm font-semibold
-         text-cyan-400 border border-cyan-400
-         overflow-hidden group
-         transition-all duration-700 ease-in-out
-         hover:shadow-md hover:shadow-cyan-400/20"
->
-  <!-- Background fill -->
-  <span
-    class="absolute inset-0 bg-cyan-400
-           scale-x-0 origin-left
-           group-hover:scale-x-100
-           transition-transform duration-700 ease-in-out"
-  ></span>
+            <a
+              id="btn1"
+              href="resume.pdf"
+              download
+              class="relative inline-flex items-center gap-2 mt-10 px-7 py-3 rounded-xl text-sm font-semibold text-cyan-400 border border-cyan-400 overflow-hidden group transition-all duration-700 ease-in-out hover:shadow-md hover:shadow-cyan-400/20"
+            >
+              <!-- Background fill -->
+              <span
+                class="absolute inset-0 bg-cyan-400 scale-x-0 origin-left group-hover:scale-x-100 transition-transform duration-700 ease-in-out"
+              ></span>
 
-  <!-- Text -->
-  <span
-    id="btnText"
-    class="relative transition-colors duration-700
-           group-hover:text-black"
-  >
-    Download Resume
-  </span>
-    <span
-    id="icon1"
-    class="relative transition-all duration-700
-           text-cyan-400 group-hover:text-black"
-  >
-    ↓
-  </span>
-</a>
+              <!-- Text -->
+              <span
+                id="btnText"
+                class="relative transition-colors duration-700 group-hover:text-black"
+              >
+                Download Resume
+              </span>
+              <span
+                id="icon1"
+                class="relative transition-all duration-700 text-cyan-400 group-hover:text-black"
+              >
+                ↓
+              </span>
+            </a>
 
-<script>
-  const btn1 = document.getElementById("btn1");
-  const btnText = document.getElementById("btnText");
+            <script>
+              const btn1 = document.getElementById("btn1");
+              const btnText = document.getElementById("btnText");
 
-  btn1.addEventListener("click", () => {
-    // Change text & color
-    btnText.textContent = "Downloaded 📩";
-    btnText.classList.remove("text-cyan-400");
-    btnText.classList.add("text-green-400");
+              btn1.addEventListener("click", () => {
+                // Change text & color
+                btnText.textContent = "Downloaded 📩";
+                btnText.classList.remove("text-cyan-400");
+                btnText.classList.add("text-green-400");
 
-    // Reset after 2s
-    setTimeout(() => {
-      btnText.textContent = "Download Resume";
-      btnText.classList.remove("text-green-400");
-      btnText.classList.add("text-cyan-400");
-    }, 2000);
-  });
-</script>
-
-
+                // Reset after 2s
+                setTimeout(() => {
+                  btnText.textContent = "Download Resume";
+                  btnText.classList.remove("text-green-400");
+                  btnText.classList.add("text-cyan-400");
+                }, 2000);
+              });
+            </script>
           </div>
 
           <!-- FORM -->
